changes background image cause heroku reasons and some positioning issues on smaller screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,7 +30,7 @@ li {
  }
 
  .backdrop {
-   background-image: url(/assets/1820592.jpg);
+   background-image: url(http://i.imgur.com/A2rqm.png);
    position: fixed;
    top: 0;
    bottom: 0;
