--- a/app/assets/stylesheets/roommate.css.scss
+++ b/app/assets/stylesheets/roommate.css.scss
@@ -7,7 +7,7 @@
   color:#fff;
   width: 220%;
   position: relative;
-  left: -300px;
+  left: -50%;
   label {
     float: left;
     margin-top: 10px;
